# churn_prediction_using_ANN

./: README.md  app.py  churn_modelling.ipynb  main.py  model.h5  pyproject.toml  requirements.txt
